# react-aws-dashboard

./: .gitignore  pyproject.toml
web-src/: index.html  package.json  tsconfig.json  vite.config.ts
web-src/public/: eel.js
web-src/src/: App.tsx  eel.ts
