[tool.poetry]
name = "react-aws-dashboard"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
readme = "README.md"
packages = [{include = "react_aws_dashboard"}]

[tool.poetry.dependencies]
python = "^3.11"
eel = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
